Changed PieceType from a record to an interface. This change allows specifying specific implementations for specific sets of piece types (e.g., StandardPieceType with CheckRule, CheckMateRule, etc.). These specialized implementations can then make assumptions about the game context they couldn't beforehand, like knowing the amount of piece types.